--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "dev": "ts-node src/app.ts"
   },
   "dependencies": {
+    "@azure-rest/ai-inference": "^1.0.0-beta.6",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/core-sse": "^2.2.0",
     "@google/generative-ai": "^0.24.0",
     "@prisma/client": "^6.7.0",
     "@types/bcrypt": "^5.0.2",
